Changepassword Component alignment issues fixed

--- a/client/src/components/css/ChangePassword.css
+++ b/client/src/components/css/ChangePassword.css
@@ -2,6 +2,10 @@
   padding-top: 50px;
   margin-top: 20px;
   margin-bottom: 20px;
+  display:flex;
+  justify-content: center;
+  height:100%;
+  align-items: center;
 }
 
 .card {
@@ -29,9 +33,15 @@ div.form-inline label.col-5 {
 }
 
 @media(min-width :320px) and (max-width:575px) {
+  div.container {
+    padding-right:0;
+    padding-left: 0;
+    padding-top: 0;
+  }
   label {
     text-align: left!important;
     padding-left: 0!important;
+
   }
   div.card {
     width: 100%!important;
@@ -39,9 +49,15 @@ div.form-inline label.col-5 {
     margin-left: 0;
     border: 0;
   }
-  .container {
-    padding-right:0;
-    padding-left: 0;
+
+}
+
+@media (min-width: 576px) and (max-width:875px){
+  label{
+    text-align: right!important;
+    padding-left: 0!important;
   }
 }
+
+
 
